--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # main text of home
-name: John Doe
-bio: 'A Man who travels the world eating noodles'
+name: Austin M. Tse
+bio: 'Systems enthusiast, business strategist, part-time philosopher.'
 
 # if it's an external image, update below for true
 external-image: false
 picture: 'assets/images/profile.jpg'
 
-url: http://koppl.in/indigo
+url: http://austntatious.github.io
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
@@ -24,19 +24,20 @@ highlighter: rouge
 # if you don't want comments in your posts, set to false
 disqus: mydisqus
 
+# add your screenname and it will append it to site url
 # if you don't have any of social below, comment the line
 facebook: myfacebook
-twitter: mytwitter
+twitter: austntatious
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: austintse
 youtube: myyoutube
-spotify: myspotify
-github: mygithub
-medium: medium
-vimeo: myvimeo
-email: myemail@gmail.com
+# spotify: myspotify
+github: austntatious
+# medium: medium
+# vimeo: myvimeo
+email: ayce24@gmail.com
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
