--- a/_config.yml
+++ b/_config.yml
@@ -26,13 +26,13 @@ disqus: mydisqus
 
 # add your screenname and it will append it to site url
 # if you don't have any of social below, comment the line
-facebook: myfacebook
+# facebook: myfacebook
 twitter: austntatious
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
 linkedin: austintse
-youtube: myyoutube
+# youtube: myyoutube
 # spotify: myspotify
 github: austntatious
 # medium: medium
@@ -49,7 +49,7 @@ width: normal
 # paginate_path: "blog/:num/"
 
 # if you don't need projects, comment the *projects* configs below
-projects: true
+# projects: true
 
 # if you don't need "about" or "blog", comment them out below
 about: true
